--- a/Sukhjeet_INSE_6220_ADV_Stats.ipynb
+++ b/Sukhjeet_INSE_6220_ADV_Stats.ipynb
@@ -553,6 +553,32 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Loan Dataset Description**"
+      ],
+      "metadata": {
+        "id": "lc6Pu0Y7Jo9E"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The \"Cleaned_LoanDataset\" is a refined dataset related to loans and borrowers, prepared for analysis by removing inconsistencies, missing values, and formatting issues. It likely contains attributes such as loan amount, term, interest rate, loan status, borrower demographics (age, gender, marital status), financial metrics (income, credit score, debt-to-income ratio), and loan purpose.\n",
+        "\n",
+        "This dataset can be used for exploratory data analysis, predictive modeling (e.g., predicting loan approvals or defaults), and data visualization to uncover patterns and trends. It serves as a valuable resource for financial institutions or researchers aiming to analyze loan behaviors or optimize lending processes.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "wTohSmqJJxOE"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
